# blueberry-engine

./: .gitignore  CMakeLists.txt
include/blueberry/: application.hh  log.hh  window.hh
include/blueberry/graphics/: shader.hh  texture.hh
include/blueberry/graphics/3d/: mesh.hh  perspective_camera.hh
include/blueberry/input/: keyboard_input.hh  mouse_input.hh
libs/glad/: CMakeLists.txt
libs/glfw/: CMakeLists.txt
libs/stb/: CMakeLists.txt
src/: application.cc  log.cc
src/graphics/: shader.cc  texture.cc
src/graphics/3d/: perspective_camera.cc
src/input/: keyboard_input.cc  mouse_input.cc
test/: CMakeLists.txt  input_test.cc  main.cc
